d3/horizontal scroll fixed and desk line fixed bottom

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -121,6 +121,13 @@ li.active a{
     border-bottom: 0;
   }
 }
+.desklines{
+ border-top: 3px solid black;
+ border-bottom:3px solid black;
+ width: 100%;
+ padding-bottom:40px;
+ margin-bottom:150px;
+}
 /*//////////////////////////////////////////////////////////////////////////////////////End Nav and Presets///////////////////////////////////////////////////////////////////////////////////*/
 .titles h2{
   padding: 20px;
